add chat feature with websocket
